<resources>
    <string name="app_name">Matbakhy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="meals">Meals</string>
    <string name="ingredient">Ingredient</string>
    <string name="filter_by">Filter By :</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="logout">Logout</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="search_recipes">Search recipes, ingredients..</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="explore_countries">Explore Countries</string>
    <string name="instructions">Instructions</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="guest_dialog">You are browsing in guest mode. Sign in to save your favorites and access all features.</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="your_full_name">Your full name</string>
    <string name="continue_with">Or continue with</string>
    <string name="continue_guest">Continue as Guest</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="don_have_account">Do not have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password_desc">Enter your email to receive reset instructions</string>
    <string name="forget_password_desc2">We will send you an email with instructions to reset your password.</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="remember_password">Remember your password</string>
    <string name="sign_up_details">Sign Up to continue your culinary journey</string>
    <string name="email_placeholder">your.email@example.com</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="resend_email">Resend email</string>
    <string name="no_email">Did not receive the email? Check your spam folder or</string>
    <string name="we_sent_email">We have sent password reset instructions to your email address.</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="planned_meals">Planned Meals</string>
    <string name="lost_connection">Lost Connection</string>
    <string name="no_internet_connection">Your internet connection appears to be offline</string>
    <string name="retry">Retry</string>

    <string name="default_web_client_id"><![CDATA[863663174125-5nqhjlqkfk95ffd8jc2q1kiovv4i8sp2.apps.googleusercontent.com]]></string>
</resources>